Added an external style sheet
Added and external style sheet.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<title>Focal Utopia Be  High Fidelity Speakers</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-
+    <hr>
 	<h1>FOCAL EXCLUSIVE TECHNOLOGY</h1>
-	
+	<hr>
+    
 	<h2>NO LIMIT FOR PASSION…</h2>
 	<p>The kits in the Utopia range represent the pinnacle of Focal’s car audio universe. Choose an exceptional audio solution for an ultimate driving experience. The materials and finishes blend in with your car’s interior for perfect harmony.</p>
 	
