added classes to css
added two classes to css style sheet

--- a/index.html
+++ b/index.html
@@ -6,25 +6,23 @@
 </head>
 <body>
     <hr>
-	<h1>FOCAL EXCLUSIVE TECHNOLOGY</h1>
+	<h1 class="focal">FOCAL EXCLUSIVE TECHNOLOGY</h1>
 	<hr>
     
-	<h2>NO LIMIT FOR PASSION…</h2>
-	<p>The kits in the Utopia range represent the pinnacle of Focal’s car audio universe. Choose an exceptional audio solution for an ultimate driving experience. The materials and finishes blend in with your car’s interior for perfect harmony.</p>
+	<h2 class="focal">NO LIMIT FOR PASSION…</h2>
+	<p class="focal">The kits in the Utopia range represent the pinnacle of Focal’s car audio universe. Choose an exceptional audio solution for an ultimate driving experience. The materials and finishes blend in with your car’s interior for perfect harmony.</p>
 	
-	<h2>MADE IN FRANCE</h2>
-	<p>Focal produces its unique models in France in the semi-automated workshop. These aspirational products naturally incorporate custom-built installations, developed by the best experts of installation.</p>
+	<h2 class="focal">MADE IN FRANCE</h2>
+	<p class="focal">Focal produces its unique models in France in the semi-automated workshop. These aspirational products naturally incorporate custom-built installations, developed by the best experts of installation.</p>
 
-	<h2>ULTIMATE TECHNOLOGY</h2>
-	<p>Live the Grande Utopia Be experience in your car: the Ultima kits are inspired by the best speaker drivers developed and manufactured for our high-end loudspeakers. You’ll be sure to find equipment packed with technology like you’ve never seen before in the Car Audio universe.</p>
+	<h2 class="focal">ULTIMATE TECHNOLOGY</h2>
+	<p class="focal">Live the Grande Utopia Be experience in your car: the Ultima kits are inspired by the best speaker drivers developed and manufactured for our high-end loudspeakers. You’ll be sure to find equipment packed with technology like you’ve never seen before in the Car Audio universe.</p>
 
 	<hr>
-	<h1>NO LIMIT FOR PASSION!</h1>
+	<h1 class="ultima">NO LIMIT FOR PASSION!</h1>
 	<hr>
-	<h2>ULTIMA</h2>
-	<p>Ultima is an active audio kit designed and developed from the best of Focal technologies, from the most prestigious hi-fi speakers. New acoustics reference, true hi-fi system, Ultima is composed of a real mid-bass developed from the Grande Utopia EM midrange associated with its pure Beryllium tweeter with IAL2 technology and two 8" subwoofers designed for the high end professional monitoring system SM9.</p>
-	<p>Ultima goes beyond the reasonable bounds and offers unparalleled purity and acoustic efficiency to the most demanding music and car lovers! COMPOSITION OF THE KIT : 2 x Tweeters, 2 x Woofers, 2 x Subwoofers.</p>
-
-
+	<h2 class="ultima">ULTIMA</h2>
+	<p class="ultima">Ultima is an active audio kit designed and developed from the best of Focal technologies, from the most prestigious hi-fi speakers. New acoustics reference, true hi-fi system, Ultima is composed of a real mid-bass developed from the Grande Utopia EM midrange associated with its pure Beryllium tweeter with IAL2 technology and two 8" subwoofers designed for the high end professional monitoring system SM9.</p>
+	<p class="ultima">Ultima goes beyond the reasonable bounds and offers unparalleled purity and acoustic efficiency to the most demanding music and car lovers! COMPOSITION OF THE KIT : 2 x Tweeters, 2 x Woofers, 2 x Subwoofers.</p>
 </body>
 </html>
