Added Header & Navigation
Crated header Image
Added Header
Added Navigation Bar

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
+    <DIV class="center">
+        <img src="images/header.jpg" alt="Focal Utopia Be">
+    </DIV>
+    <DIV id="table">
+        <table id="table" >
+            <tr>
+                <td>Home</td>
+                <td>About</td>
+                <td>Products</td>
+                <td>Contact</td>
+            </tr>
+        </table>
+    </DIV>
     <hr>
 	<h1 class="focal">FOCAL EXCLUSIVE TECHNOLOGY</h1>
 	<hr>
