--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <DIV class="center">
         <img src="images/header.jpg" alt="Focal Utopia Be">
     </DIV>
-    <DIV id="table">
+    <DIV id="table" class="center">
         <table id="table" >
             <tr>
                 <td>Home</td>
