Tride to giv all divs a background
Unsuccessfully tried put all of the divs inside of a div to add a background color to hide space betweed above and below the divs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
+<div class="background">
     <DIV class="center">
         <img src="images/header.jpg" alt="Focal Utopia Be">
     </DIV>
@@ -45,5 +46,6 @@
 	   <p class="ultima">Ultima is an active audio kit designed and developed from the best of Focal technologies, from the most prestigious hi-fi speakers. New acoustics reference, true hi-fi system, Ultima is composed of a real mid-bass developed from the Grande Utopia EM midrange associated with its pure Beryllium tweeter with IAL2 technology and two 8" subwoofers designed for the high end professional monitoring system SM9.</p>
 	   <p class="ultima">Ultima goes beyond the reasonable bounds and offers unparalleled purity and acoustic efficiency to the most demanding music and car lovers! COMPOSITION OF THE KIT : 2 x Tweeters, 2 x Woofers, 2 x Subwoofers.</p>
     </div>
+</div>
 </body>
 </html>
