changed background image
Replaced the music background with the color scheme background

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-<div class="background">
+<div id="background" class="center">
     <DIV class="center">
         <img src="images/header.jpg" alt="Focal Utopia Be">
     </DIV>
