--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
     <div class="center" id="productheader">
         <hr>
-	   <h1  class="focal"><a=href"https://www.focal.com/en">FOCAL</a> 21 WX SUBWOOFER</h1>
+	   <h1 class="focal"><a href="https://www.focal.com/en">FOCAL</a> 21 WX SUBWOOFER</h1>
 	   <hr>
     </div>
     
