Styled Subwoofer Product
Styld table and list for subwoofer

--- a/index.html
+++ b/index.html
@@ -28,20 +28,23 @@
         <hr>
     </div>
     
-    <div id="product-div" class="focal">
+    <div id="product-div">
         <table id="product table">
             <tr>
                 <td>
                     <img src="images/focal-21-wx.jpg" alt="Focal 21wx Subwoofer">
                 </td>
-                <td>
-                    <h2>Features</h2>
+                <td style="text-align: left; padding: 5px;">
+                    <h2 style="text-align: center;">Features</h2>
                     <ul>
-                    <li>8’’ reference subwoofer</li>
+                    <li>8’’ (21 cm) reference subwoofer</li>
                     <li>W sandwich composite woofer cone</li>
                     <li>For small sealed box (15 to 30 liters)</li>
                     <li>Multiferrite magnet</li> 
-                    <li>Very high power handling</li>
+                    <li>Power handling 250W/500W</li>
+                    <li>Nominale impedance 4 ohms</li>
+                    <li>Frequency response (+/- 3dB) 29Hz</li>
+                    <li>Sensitivity (2.83V/1M) 86.5dB</li>
                 </td>
             </tr>
             </ul>
