Added 2nd Part fo Product
Copied subwoofer and chaned content to the no 7 3-way component kit

--- a/index.html
+++ b/index.html
@@ -53,9 +53,30 @@
 
      <div class="center" id="productheader">
         <hr>
-        <h1 class="focal"><a href="https://www.focal.com/en">FOCAL</a> 21 WX SUBWOOFER</h1>
+        <h1 class="focal"><a href="https://www.focal.com/en">FOCAL</a> 3 WAY 6.5’’/3'' (16.5/8CM) KIT</h1>
         <hr>
     </div>
+    <div id="product-div">
+        <table id="product table">
+            <tr>
+                <td>
+                    <img src="images/utopia-be-kit-n07.jpg" alt="3 WAY 6.5’’/3'' (16.5/8CM) KIT">
+                </td>
+                <td style="text-align: left; padding: 5px;">
+                    <h2 style="text-align: center;">Features</h2>
+                    <ul>
+                    <li>6’’ 3-way reference system</li>
+                    <li>Pure Beryllium inverted dome tweeter</li>
+                    <li>W sandwich composite woofer cone</li>
+                    <li>W sandwich composite midrange cone</li> 
+                    <li>Crossblock N°7 crossover</li>
+                    <li>ß Compact woofer with damping</li>
+                    <li>Kick panel mounting for midrange</li>
+                    <li>Ready for biwiring</li>
+                </td>
+            </tr>
+            </ul>
+        </table>
     
     <div id="footer" class="center">
 	   <h2 class="ultima">Footr</h2>
