--- a/index.html
+++ b/index.html
@@ -78,9 +78,13 @@
             </ul>
         </table>
     
-    <div id="footer" class="center">
-	   <h2 class="ultima">Footr</h2>
-	       <p class="ultima">Footr Text</p>
+    <div class="footer">
+        <hr>
+	   <h2>BB Autosound | www.bbautosound.com</h2>
+        <p>
+            (305)942-8997 | info@bbautosound.com<br>
+            1234 NE 200th St | Suite 10 | Miami | Florida | 33120
+        </p>
     </div>
 </div>
 </body>
