--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <div id="background" class="center">
     
     <DIV class="center">
-        <a href="http://soundsgoodstereo.com/" target="_blank"><img src="images/header-2.jpg" alt="Focal Utopia Be"></a>
+        <img name="header2" src="images/header-2.gif" width="1000" height="314" border="0" id="header2" usemap="#m_header2" alt="Sounds Good Focal Utopia B Header" /><map name="m_header2" id="m_header2">
+        <area shape="rect" coords="763,221,972,280" href="https://www.focal.com/en/car-audio/car-audio-kits-solutions/elite/utopia-be" target="_blank" title="Utopia Be Component Speaker System" alt="Utopia Be Component Speaker System" />
+        <area shape="poly" coords="761,216,764,164,863,163,863,136,874,120,887,111,899,104,888,100,877,99,867,97,862,96,859,73,881,59,865,58,846,57,836,57,824,59,812,60,812,33,843,32,862,31,882,34,897,36,922,41,946,49,947,71,941,73,922,75,910,75,902,80,913,85,928,93,939,100,937,121,922,120,912,124,904,129,893,135,885,141,877,145,872,149,873,151,875,155,877,162,888,163,955,163,955,205,979,206,976,216,761,216" href="https://www.focal.com/" target="_blank" title="Focal" alt="Focal" />
+        <area shape="poly" coords="24,82,191,84,194,78,192,72,188,69,172,68,171,67,192,42,168,17,42,17,35,23,30,28,32,34,31,67,31,70,26,70,24,72,24,82" href="http://soundsgoodstereo.com/" target="_blank" title="Sounds Good Stereo" alt="Sounds Good Stereo" />
+        </map>
     </DIV>
     
     <DIV id="table" class="center">
