Added links and changed visited
Added links to the manufacturer's product pages in the product headings. And changed the visited link color to a more visible colro

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </DIV>
 
     <div class="center" id="productheader">
-        <h1 class="focal"><a href="https://www.focal.com/en" target="_blank">FOCAL</a> 21 WX SUBWOOFER</h1>
+        <h1 class="focal"><a href="https://www.focal.com/en" target="_blank">FOCAL</a> <a href="https://www.focal.com/en/car-audio/car-audio-kits-solutions/elite/utopia-be/subwoofers/utopia-be-21-wx" target="_blank">21 WX SUBWOOFER</a></h1>
     </div>
     
     <div id="product-div">
@@ -54,7 +54,7 @@
      </div>
 
      <div class="center" id="productheader">
-        <h1 class="focal"><a href="https://www.focal.com/en" target="_blank">FOCAL</a> 3 WAY 6.5’’/3'' (16.5/8CM) KIT</h1>
+         <h1 class="focal"><a href="https://www.focal.com/en" target="_blank">FOCAL</a> <a href="https://www.focal.com/en/car-audio/car-audio-kits-solutions/elite/utopia-be/component-kits/utopia-be-kit-ndeg7" target="_blank">3 WAY 6.5’’/3'' (16.5/8CM) KIT</a></h1>
     </div>
     <div id="product-div">
         <table id="product table">
